kube/chap5/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: kubia
            port: 
              number: 80
      # - path: /foo
      #   pathType: Prefix  
      #   backend:
      #     service:
      #       name: bar
      #       port:
      #         number: 80
